--- a/RecipiesNstuff/Properties/launchSettings.json
+++ b/RecipiesNstuff/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7104;http://localhost:5104",
+      "applicationUrl": "https://localhost:443;http://localhost:80",
       "dotnetRunMessages": true
     },
     "IIS Express": {
@@ -29,15 +29,19 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:443;http://localhost:80"
+      }
     },
     "WSL": {
       "commandName": "WSL2",
       "launchBrowser": true,
-      "launchUrl": "https://localhost:7104",
+      "launchUrl": "https://localhost:443",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_URLS": "https://localhost:7104;http://localhost:5104"
+        "ASPNETCORE_URLS": "https://localhost:443;http://localhost:80"
       },
       "distributionName": ""
     }
