--- a/RecipiesNstuff/Dockerfile
+++ b/RecipiesNstuff/Dockerfile
@@ -2,13 +2,13 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 443
 EXPOSE 80
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["RecipiesNstuff.csproj", "RecipiesNstuff/"]
-RUN dotnet restore "RecipiesNstuff.csproj"
+COPY ["RecipiesNstuff/RecipiesNstuff.csproj", "RecipiesNstuff/"]
+RUN dotnet restore "RecipiesNstuff/RecipiesNstuff.csproj"
 COPY . .
 WORKDIR "/src/RecipiesNstuff"
 RUN dotnet build "RecipiesNstuff.csproj" -c Release -o /app/build
